2020-01-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.5-1; for CRAN 'Additional issues', fiddling w/
	* tests/Valderio-ex.R: show all.equal(*, tol=0) only if "surprising"

2019-12-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Authors@R): using new format; ready for CRAN

	* R/fd-methods.R (summary.fracdiff): renamed '$ coefficients' such
	that 'coef()' works.

2019-12-09  Rob Hyndman  <rob.hyndman@monash.edu>

	* R/fracdiff.R, fd-methods.R (fracdiff): provide 'residuals()' and
	'fitted'()' methods.

2018-09-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/diffseries.R (diffseries): Finally found bug in the fft() based
	version {"forgotten" centering} and fixed it.

2018-09-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.5-0 (for new release with proper Imports)

2012-12-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.4-2

	* R/fracdiff.R (fracdiff.sim): new argument 'start.innov' in order
	to become even closer to  arima.sim().  New arg 'backComp' which
	should allow to get *the same* results are  arima.sima().

2011-08-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.4-0

	* R/fd-methods.R (summary.fracdiff): fix bug that gave wrong 'df'

	* R/fracdiff.R (fracdiff): new 'trace' argument;
	  further: now return estimated sigma (of white noise).
	* src/fdcore.c: -> verbose argument for iteration monitoring

	* src/init.c: add (dll symbol) "registration", for implied consistency checking
	* NAMESPACE: ditto

	* src/*.[ch]: a bit of cleanup; no longer using global  fd_min_fnorm

2011-04-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/fdcore.c: remove set but unused variables (R 2.14.0 on CRAN now warns).

2009-06-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.3-2, released to CRAN

2009-06-08  Martin Maechler  <maechler@stat.math.ethz.ch>
