@@ -1,7 +1,7 @@
 Package: fracdiff
-Version: 1.5-1
-VersionNote: Released 1.4-2 on 2012-12-01, 1.5-0 on 2019-12-09
-Date: 2020-01-20
+Version: 1.5-2
+VersionNote: Released 1.5-0 on 2019-12-09, 1.5-1 on 2020-01-20
+Date: 2022-10-31
 Title: Fractionally Differenced ARIMA aka ARFIMA(P,d,q) Models
 Authors@R: c(person("Martin","Maechler", role=c("aut","cre"), email="maechler@stat.math.ethz.ch",
 	   				 comment = c(ORCID = "0000-0002-8685-9910"))
@@ -23,7 +23,7 @@ URL: https://github.com/mmaechler/fracdiff
 BugReports: https://github.com/mmaechler/fracdiff/issues
 Encoding: UTF-8
 NeedsCompilation: yes
-Packaged: 2020-01-20 17:02:30 UTC; maechler
+Packaged: 2022-10-31 12:58:46 UTC; maechler
 Author: Martin Maechler [aut, cre] (<https://orcid.org/0000-0002-8685-9910>),
   Chris Fraley [ctb, cph] (S original; Fortran code),
   Friedrich Leisch [ctb] (R port,
@@ -34,4 +34,4 @@ Author: Martin Maechler [aut, cre] (<https://orcid.org/0000-0002-8685-9910>),
     <https://orcid.org/0000-0002-2140-5352>)
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
 Repository: CRAN
-Date/Publication: 2020-01-24 17:30:05 UTC
+Date/Publication: 2022-10-31 19:50:38 UTC
