@@ -1,5 +1,5 @@
-8e318d365ff6dc92299d1f9313b30b47 *ChangeLog
-edf5de54d8ac2ffb842cbbde55938f94 *DESCRIPTION
+57c2c8f379b93f65417fa49801f9c6f6 *ChangeLog
+dcf87236690a40ba4ca244011f1a6a22 *DESCRIPTION
 3697b0d3de7479c51c93d61fe20f68b3 *NAMESPACE
 f4f0fc84ffeebfaf33a2dea0dfe23290 *R/diffseries.R
 1f8574cf20a4f34ef2018faee0c009fe *R/fd-methods.R
@@ -8,25 +8,25 @@ f4f0fc84ffeebfaf33a2dea0dfe23290 *R/diffseries.R
 7c03205f5af65e87838245890fbef68f *R/fracdiff.R
 cc4b16ee40609adbf6d5eea91aa31668 *README
 05c4ec7d8644cbd6c467db3108ec2f0c *TODO
-02108806605e043ba247bfa655adba9d *build/partial.rdb
+ea124a494ad7922985532ad3b308e4d5 *build/partial.rdb
 8519303ab6180ae5b72bfb7e08b466b1 *man/confint.fracdiff.Rd
 8113e7c8baf0419d7962ca1327b46bee *man/diffseries.Rd
 ff5a7e6439ede40296b4a5f261dde29e *man/fd-methods.Rd
 309734764ac1d753dd07ff27c6192a1c *man/fdGPH.Rd
 2876ba0566b2d9f40ba714682401138a *man/fdSperio.Rd
-5e5406da10fbaf16e6bc9a9a84463a74 *man/fracdiff.Rd
+391c7dc08e91fbfccc4d41e653f61ab3 *man/fracdiff.Rd
 c0ef6230721c3be752b853d70f0cf9dd *man/fracdiff.sim.Rd
 d0b12302dc3d328b994881df65715a09 *man/fracdiff.var.Rd
 2fa4c7011c2bc0f7449ae151d5cc44ae *src/Makevars
-12e85b7233fe1d40988daee1a4e4572d *src/fdcore.c
+38bc80bfe58dfaf10ac11a209e2976c9 *src/fdcore.c
 b67ea7cf831fd635a1be01b60e83adcc *src/fdgam.c
 79d10b971d0015b5e6aa64ec115ffdcc *src/fdhess.c
 9403abe2144eab3a0f708292ed0e4db8 *src/fdmin.c
 8c2630ad0887fc72056dacc0b54f9a28 *src/fdsim.c
-cb2e7a29fe608840e216ca854d7343aa *src/fracdiff.h
+9195f85e79f1f3de95cf2bce438950e1 *src/fracdiff.h
 6fe329996ca0b045dffbe8d81944f4de *src/gamm_comm.h
 017be9fbeaaeff60740269095697c364 *src/hess_comm.h
-012e8a65ac0bcad3cc112bb7ec715e90 *src/init.c
+75f65296169f12ec139d48c465a8779f *src/init.c
 51000f9ec70c6503b84239c646ac4241 *src/mach_comm.h
 3ef6556fc2a65de62819a3c1d9eb01b6 *src/maux_comm.h
 52bd746de8e016767e4cd0ee28dd0e56 *src/pmult.c
